mcp Authorization passthough
Allow mcp Authorization passthough for streamable-http MCP server .
Using AllowAuthorizationPassThrough  parameter in MCPServerConfig . It can be configured in UI . Available only for streamable-http MCP server . Default value is false.

--- a/web/src/i18n/locales/zh/translation.json
+++ b/web/src/i18n/locales/zh/translation.json
@@ -330,7 +330,8 @@
     "property_type": "属性类型",
     "property_description": "属性描述",
     "header_name_placeholder": "请输入头部名称",
-    "header_value_placeholder": "请输入头部值"
+    "header_value_placeholder": "请输入头部值",
+    "allow_authorization_pass_through": "允许透传 Authorization 头部"
   },
   "chat": {
     "title": "聊天",
