feat: 实现MCP能力管理功能
在Gateway页面新增MCP能力按钮，支持自动发现MCP服务能力：
- 前端：新增Gateway页面MCP能力管理界面
- 后端：实现GET /api/mcp/capabilities/:tenant/:name接口
- 支持查看工具、资源、提示词详情信息
- 支持开启和禁用已发现的工具功能
- 新增字段兼容所有支持的数据库类型
- 保持原有功能完整性，不影响现有MCP服务器管理

主要功能模块：
- MCP能力自动发现和缓存机制
- 能力详情展示组件(工具/资源/提示词)
- 工具状态管理(启用/禁用)
- 能力统计信息接口
- 权限控制和多租户支持

Signed-off-by: x22x22 <wadeking@qq.com>

--- a/web/src/i18n/locales/en/translation.json
+++ b/web/src/i18n/locales/en/translation.json
@@ -72,7 +72,11 @@
     "sse_url": "SSE URL",
     "streamable_http_url": "Streamable HTTP URL",
     "total_items": "Total {{total}} items",
-    "experimental": "Experimental"
+    "experimental": "Experimental",
+    "enabled": "Enabled",
+    "disabled": "Disabled",
+    "select_all": "Select All",
+    "deselect_all": "Deselect All"
   },
   "nav": {
     "dashboard": "Dashboard",
@@ -431,7 +435,8 @@
     "systemPromptPlaceholder": "Set a custom system prompt for the assistant (optional)",
     "editSystemPrompt": "Edit System Prompt",
     "authTokenPlaceholder": "Enter authentication token",
-    "authToken": "Authentication Token"
+    "authToken": "Authentication Token",
+    "test": "Test"
   },
   "users": {
     "title": "User Management",
@@ -539,6 +544,7 @@
     "get_tools_failed": "Failed to get tools list: {{error}}",
     "call_tool_failed": "Failed to call tool {{toolName}}: {{error}}",
     "fetch_mcp_server": "Failed to fetch MCP server",
+    "fetch_mcp_capabilities": "Failed to fetch MCP server capabilities",
     "create_mcp_server": "Failed to create MCP server",
     "update_mcp_server": "Failed to update MCP server configuration",
     "delete_mcp_server": "Failed to delete MCP server",
@@ -605,6 +611,62 @@
       "set_active_success": "Version set as active successfully",
       "set_active_error": "Failed to set version as active"
     }
+  },
+  "capabilities": {
+    "title": "Server Capabilities",
+    "tools": "Tools",
+    "prompts": "Prompts",
+    "resources": "Resources",
+    "resourceTemplates": "Resource Templates",
+    "resource_templates": "Resource Templates",
+    "search_placeholder": "Search capabilities...",
+    "advanced_search": "Advanced Search",
+    "advanced_filters": "Advanced Filters",
+    "status_filter": "Status Filter",
+    "param_count_filter": "Parameter Count Filter",
+    "no_params": "No Parameters",
+    "few_params": "Few Parameters (1-3)",
+    "many_params": "Many Parameters (4+)",
+    "search_options": "Search Options",
+    "search_in_description": "Search in Description",
+    "case_sensitive": "Case Sensitive",
+    "no_capabilities": "No capabilities available",
+    "no_type_capabilities": "No {{type}} available",
+    "tool_schema": "Tool Schema",
+    "arguments": "Arguments",
+    "resource_uri": "Resource URI",
+    "uri_template": "URI Template",
+    "mime_type": "MIME Type",
+    "server_capabilities": "Server Capabilities",
+    "view_capabilities": "View Capabilities",
+    "manage_server_tools_and_capabilities": "Manage server tools and capabilities",
+    "mcp_service_capabilities": "MCP Service Capabilities",
+    "service_name": "Service Name",
+    "tenant": "Tenant",
+    "mcp_service_description": "View and manage tools, prompts, resources and other capabilities auto-discovered from this MCP service. These capabilities come from real-time discovery of the MCP server and do not belong to manually configured capabilities in gateway configuration.",
+    "mcp_auto_discovery": "MCP Auto-Discovery Capabilities",
+    "mcp_auto_discovery_description": "The capabilities shown below are discovered in real-time from the MCP server, including tools, prompts, resources, and resource templates. These capabilities differ from manually configured tools in gateway management and are dynamically updated based on the MCP server's actual capabilities.",
+    "parameters": "Parameters",
+    "more": "more",
+    "expand": "Expand",
+    "collapse": "Collapse",
+    "required": "Required",
+    "toggle_tool_status": "Toggle {{name}} tool status",
+    "view_details": "View Details",
+    "tool_status_updated": "Tool status updated",
+    "batch_tool_status_updated": "Batch tool status updated",
+    "selected_tools": "{{count}} tools selected",
+    "batch_enable": "Batch Enable",
+    "batch_disable": "Batch Disable",
+    "sync_status_success": "Sync Success",
+    "sync_status_error": "Sync Error",
+    "sync_status_syncing": "Syncing",
+    "sync_status_unknown": "Status Unknown",
+    "export": "Export",
+    "export_success": "Export successful",
+    "export_failed": "Export failed",
+    "enum_values": "Enum Values",
+    "type": "Type"
   },
   "llm": {
     "title": "LLM Providers",
