--- a/web/src/i18n/locales/zh/translation.json
+++ b/web/src/i18n/locales/zh/translation.json
@@ -63,6 +63,11 @@
     "copy": "复制",
     "copied": "已复制: {{text}}",
     "copy_failed": "复制失败",
+    "enabled": "已启用",
+    "disabled": "已禁用",
+    "required": "必需",
+    "select_all": "全选",
+    "deselect_all": "取消全选",
     "add": "添加",
     "clear": "清除",
     "collapse": "收起",
@@ -72,7 +77,9 @@
     "sse_url": "SSE URL",
     "streamable_http_url": "Streamable HTTP URL",
     "total_items": "共 {{total}} 条",
-    "experimental": "实验性"
+    "experimental": "实验性",
+    "enabled": "已启用",
+    "disabled": "已禁用"
   },
   "nav": {
     "dashboard": "仪表盘",
@@ -431,7 +438,8 @@
     "systemPromptPlaceholder": "为助手设置自定义系统提示词（可选）",
     "editSystemPrompt": "编辑系统提示词",
     "authTokenPlaceholder": "请输入认证令牌",
-    "authToken": "认证令牌"
+    "authToken": "认证令牌",
+    "test": "测试"
   },
   "users": {
     "title": "用户管理",
@@ -539,6 +547,10 @@
     "get_tools_failed": "获取工具列表失败: {{error}}",
     "call_tool_failed": "调用工具 {{toolName}} 失败: {{error}}",
     "fetch_mcp_server": "获取 MCP 服务失败",
+    "fetch_mcp_capabilities": "获取 MCP 服务器能力失败",
+    "fetch_mcp_capabilities_stats": "获取 MCP 服务器能力统计失败",
+    "update_tool_status": "更新工具状态失败",
+    "batch_update_tool_status": "批量更新工具状态失败",
     "create_mcp_server": "创建 MCP 服务失败",
     "update_mcp_server": "更新 MCP 服务配置失败",
     "delete_mcp_server": "删除 MCP 服务失败",
@@ -605,6 +617,62 @@
       "set_active_success": "设置为活动版本成功",
       "set_active_error": "设置为活动版本失败"
     }
+  },
+  "capabilities": {
+    "title": "服务器能力",
+    "tools": "工具",
+    "prompts": "提示词",
+    "resources": "资源",
+    "resourceTemplates": "资源模板",
+    "resource_templates": "资源模板",
+    "search_placeholder": "搜索能力...",
+    "advanced_search": "高级搜索",
+    "advanced_filters": "高级筛选",
+    "status_filter": "状态筛选",
+    "param_count_filter": "参数数量筛选",
+    "no_params": "无参数",
+    "few_params": "少量参数(1-3个)",
+    "many_params": "大量参数(4+个)",
+    "search_options": "搜索选项",
+    "search_in_description": "在描述中搜索",
+    "case_sensitive": "区分大小写",
+    "no_capabilities": "暂无能力信息",
+    "no_type_capabilities": "暂无{{type}}信息",
+    "tool_schema": "工具模式",
+    "arguments": "参数",
+    "resource_uri": "资源URI",
+    "uri_template": "URI模板",
+    "mime_type": "MIME类型",
+    "server_capabilities": "服务能力",
+    "view_capabilities": "查看能力",
+    "manage_server_tools_and_capabilities": "管理服务器工具和能力",
+    "mcp_service_capabilities": "MCP 服务能力",
+    "service_name": "服务名称",
+    "tenant": "租户",
+    "mcp_service_description": "查看和管理此 MCP 服务自动发现的工具、提示词、资源等能力。这些能力来自 MCP 服务器的实时发现，不属于网关配置中手动配置的能力。",
+    "mcp_auto_discovery": "MCP 自动发现能力",
+    "mcp_auto_discovery_description": "以下显示的能力是从 MCP 服务器实时发现的，包括工具、提示词、资源和资源模板。这些能力与网关管理中手动配置的工具不同，它们会根据 MCP 服务器的实际能力动态更新。",
+    "parameters": "参数",
+    "more": "更多",
+    "expand": "展开",
+    "collapse": "收起",
+    "required": "必需",
+    "toggle_tool_status": "切换{{name}}工具状态",
+    "view_details": "查看详情",
+    "tool_status_updated": "工具状态已更新",
+    "batch_tool_status_updated": "批量工具状态已更新",
+    "selected_tools": "已选择 {{count}} 个工具",
+    "batch_enable": "批量启用",
+    "batch_disable": "批量禁用",
+    "sync_status_success": "同步成功",
+    "sync_status_error": "同步失败",
+    "sync_status_syncing": "同步中",
+    "export": "导出",
+    "export_success": "导出成功",
+    "export_failed": "导出失败",
+    "sync_status_unknown": "状态未知",
+    "enum_values": "可选值",
+    "type": "类型"
   },
   "llm": {
     "title": "LLM 提供商",
