feat: 更新翻译文件，移除多余的内容
在英文和中文翻译文件中，移除了不必要的测试相关条目，简化了翻译内容，提升了代码的可维护性。

Signed-off-by: x22x22 <wadeking@qq.com>

--- a/web/src/i18n/locales/en/translation.json
+++ b/web/src/i18n/locales/en/translation.json
@@ -435,8 +435,7 @@
     "systemPromptPlaceholder": "Set a custom system prompt for the assistant (optional)",
     "editSystemPrompt": "Edit System Prompt",
     "authTokenPlaceholder": "Enter authentication token",
-    "authToken": "Authentication Token",
-    "test": "Test"
+    "authToken": "Authentication Token"
   },
   "users": {
     "title": "User Management",
