feat: 更新翻译文件，移除冗余条目
在英文和中文翻译文件中，删除了多余的翻译条目，以简化内容并提升可维护性。此次更新主要集中在能力管理相关的翻译，确保翻译文件的整洁性和一致性。

Signed-off-by: x22x22 <wadeking@qq.com>

--- a/web/src/i18n/locales/en/translation.json
+++ b/web/src/i18n/locales/en/translation.json
@@ -72,11 +72,7 @@
     "sse_url": "SSE URL",
     "streamable_http_url": "Streamable HTTP URL",
     "total_items": "Total {{total}} items",
-    "experimental": "Experimental",
-    "enabled": "Enabled",
-    "disabled": "Disabled",
-    "select_all": "Select All",
-    "deselect_all": "Deselect All"
+    "experimental": "Experimental"
   },
   "nav": {
     "dashboard": "Dashboard",
@@ -612,11 +608,9 @@
     }
   },
   "capabilities": {
-    "title": "Server Capabilities",
     "tools": "Tools",
     "prompts": "Prompts",
     "resources": "Resources",
-    "resourceTemplates": "Resource Templates",
     "resource_templates": "Resource Templates",
     "search_placeholder": "Search capabilities...",
     "advanced_search": "Advanced Search",
@@ -630,41 +624,20 @@
     "search_in_description": "Search in Description",
     "case_sensitive": "Case Sensitive",
     "no_capabilities": "No capabilities available",
-    "no_type_capabilities": "No {{type}} available",
-    "tool_schema": "Tool Schema",
-    "arguments": "Arguments",
     "resource_uri": "Resource URI",
-    "uri_template": "URI Template",
-    "mime_type": "MIME Type",
-    "server_capabilities": "Server Capabilities",
     "view_capabilities": "View Capabilities",
-    "manage_server_tools_and_capabilities": "Manage server tools and capabilities",
     "mcp_service_capabilities": "MCP Service Capabilities",
     "service_name": "Service Name",
     "tenant": "Tenant",
     "mcp_service_description": "View and manage tools, prompts, resources and other capabilities auto-discovered from this MCP service. These capabilities come from real-time discovery of the MCP server and do not belong to manually configured capabilities in gateway configuration.",
-    "mcp_auto_discovery": "MCP Auto-Discovery Capabilities",
-    "mcp_auto_discovery_description": "The capabilities shown below are discovered in real-time from the MCP server, including tools, prompts, resources, and resource templates. These capabilities differ from manually configured tools in gateway management and are dynamically updated based on the MCP server's actual capabilities.",
     "parameters": "Parameters",
-    "more": "more",
     "expand": "Expand",
     "collapse": "Collapse",
     "required": "Required",
-    "toggle_tool_status": "Toggle {{name}} tool status",
     "view_details": "View Details",
-    "tool_status_updated": "Tool status updated",
-    "batch_tool_status_updated": "Batch tool status updated",
-    "selected_tools": "{{count}} tools selected",
-    "batch_enable": "Batch Enable",
-    "batch_disable": "Batch Disable",
-    "sync_status_success": "Sync Success",
-    "sync_status_error": "Sync Error",
-    "sync_status_syncing": "Syncing",
-    "sync_status_unknown": "Status Unknown",
     "export": "Export",
     "export_success": "Export successful",
     "export_failed": "Export failed",
-    "enum_values": "Enum Values",
     "type": "Type"
   },
   "llm": {
